--- a/index.html
+++ b/index.html
@@ -126,41 +126,42 @@
         // Enviar datos del formulario
         document.getElementById('form').addEventListener('submit', async function (e) {
             e.preventDefault();
-            const nombre = document.getElementById('nombre').value;
-            const apellido = document.getElementById('apellido').value;
-            const especialidad = document.getElementById('especialidad').value;
-            const matricula = document.getElementById('matricula').value;
-            const dni = document.getElementById('dni').value;
-
-            const dibujo = canvas.toDataURL('image/png'); // Convierte el dibujo a Base64
 
             const data = {
-                nombre,
-                apellido,
-                especialidad,
-                matricula,
-                dni,
-                dibujo
+                nombre: document.getElementById('nombre').value,
+                apellido: document.getElementById('apellido').value,
+                especialidad: document.getElementById('especialidad').value,
+                matricula: document.getElementById('matricula').value,
+                dni: document.getElementById('dni').value,
+                dibujo: canvas.toDataURL('image/png') // Convierte el dibujo a Base64
             };
+
+            console.log("Datos enviados al servidor:", data);
 
             try {
                 const response = await fetch('https://script.google.com/macros/s/AKfycbxI-FthqNnu3pfgxnCfBDiKia1XbF6BqkxpUOdkDsOmVkFwpGBxCLpfLAjJGmHcOiw/exec', {
-                method: 'POST',
-                body: JSON.stringify(data),
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                mode: 'no-cors'
-            });
+                    method: 'POST',
+                    body: JSON.stringify(data),
+                    headers: { 'Content-Type': 'application/json' }
+                });
+
+                console.log("Estado de la respuesta:", response.status);
+
+                // Si `no-cors` está configurado, no podremos leer `response.json()`
+                if (!response.ok) {
+                    throw new Error("No se pudo enviar la solicitud al servidor.");
+                }
 
                 const result = await response.json();
+                console.log("Respuesta del servidor:", result);
+
                 if (result.success) {
                     alert(result.message);
                 } else {
                     alert("Hubo un problema al guardar los datos.");
                 }
             } catch (error) {
-                console.error("Error:", error.message);
+                console.error("Error al enviar los datos:", error);
                 alert("Error al enviar los datos. Detalles en la consola.");
             }
         });
