--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             try {
                 const response = await fetch('https://script.google.com/macros/s/AKfycbxI-FthqNnu3pfgxnCfBDiKia1XbF6BqkxpUOdkDsOmVkFwpGBxCLpfLAjJGmHcOiw/exec', {
                     method: 'POST',
+                    mode: 'no-cors',
                     body: JSON.stringify(data),
                     headers: { 'Content-Type': 'application/json' }
                 });
